force-app/main/default/objects/refedge__Label__c/fields/refedge__Filter_RefSearch_Visible__c.field-meta.xml
<CustomField>
    <fullName>refedge__Filter_RefSearch_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Search Visible</label>
    <type>Checkbox</type>
</CustomField>