force-app/main/default/objects/refedge__Label__c/fields/refedge__Ref_Limit_to_Acct_or_Cntct__c.field-meta.xml
<CustomField>
    <fullName>refedge__Ref_Limit_to_Acct_or_Cntct__c</fullName>
    <description>limits the display of the Filter on the Nomination and Reference Profile creation forms.</description>
    <inlineHelpText>Limits the display of the Filter on the Nomination and Reference Profile creation forms.</inlineHelpText>
    <label>Limit to Account or Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>