force-app/main/default/objects/refedge__Label__c/fields/refedge__Required_in_P2P__c.field-meta.xml
<CustomField>
    <fullName>refedge__Required_in_P2P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required in P2P is used in conjunction with Show in P2P, this setting indicates that this Filter is a required selection for EVERY P2P request.</description>
    <inlineHelpText>Required in P2P is used in conjunction with Show in P2P, this setting indicates that this Filter is a required selection for EVERY P2P request.</inlineHelpText>
    <label>Required in P2P</label>
    <type>Checkbox</type>
</CustomField>