force-app/main/default/objects/refedge__Label__c/fields/refedge__Visible__c.field-meta.xml
<CustomField>
    <fullName>refedge__Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nomination Visible</label>
    <type>Checkbox</type>
</CustomField>